--- a/2221/deploy/helm/4.addition/api-tester/values.yaml
+++ b/2221/deploy/helm/4.addition/api-tester/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 image:
-  repository: sodanhyun/api-tester
+  repository: danhyeon/api-tester
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
